--- a/public/views/list2.html
+++ b/public/views/list2.html
@@ -7,7 +7,7 @@
                     <div class="weui_panel_bd">
                         <a ui-sref="content({uid:sel.up_style,id:d._id})" class="weui_media_box weui_media_appmsg" ng-repeat="d in arts | filter:list2Filter | orderBy:'id':reverse=true">
                             <div class="weui_media_hd">
-                                <img class="weui_media_appmsg_thumb" ng-src="{{'http://19.111.131.48:3001/'+d.pic}}" alt="">
+                                <img class="weui_media_appmsg_thumb" ng-src="{{'http://heibaidian.com/'+d.pic}}" alt="">
                             </div>
                             <div class="weui_media_bd">
                                 <h4 class="weui_media_title">{{d.title}}</h4>
