--- a/public/views/content.html
+++ b/public/views/content.html
@@ -18,14 +18,14 @@
                     </article>
                 </div>
             </div>
-            <div class="weui_tabbar">
+            <!-- <div class="weui_tabbar">
                 <a ui-sref="list({id:d._id})" ng-class="{weui_bar_item_on: d._id===uid}" class="weui_tabbar_item" ng-repeat="d in data | filter:homeFilter | orderBy:'id':reverse=true">
                     <div class="weui_tabbar_icon">
                         <img ng-src="../res/img/{{d._id}}.png" alt="">
                     </div>
                     <p class="weui_tabbar_label" ng-bind="d.name"></p>
                 </a>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
